[gd_scene load_steps=1 format=3 uid="uid://dg8w7v6lam4n1"]

[ext_resource type="Script" uid="uid://d2cm41tmo5yfr" path="res://addons/copilot/scenes/input_box.gd" id="1_input_box"]


[node name="InputBox" type="PanelContainer"]
custom_minimum_size = Vector2(0, 180)
size_flags_horizontal = 3
script = ExtResource("1_input_box")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Type your message... (current context is auto-included)"
wrap_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Settings"
text = "âš™"

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 2

[node name="StopButton" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer2"]
visible = false
custom_minimum_size = Vector2(60, 32)
layout_mode = 2
text = "Stop"

[node name="SendButton" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(80, 32)
layout_mode = 2
text = "Send"
